<resources>
    <string name="app_name">BINChecker</string>
    <string name="first_digits_of_a_card_number_bin_iin">First digits of a card number (BIN/IIN)</string>
    <string name="check">Check</string>
    <string name="coordinates"><u>Coordinates:</u></string>
    <string name="latitude"><u>Latitude: </u></string>
    <string name="countrylatitude"><u>countryLatitude</u></string>
    <string name="longitude"><u>Longitude: </u></string>
    <string name="countrylongitude"><u>countryLongitude</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>